--- a/SubEthaEdit-Mac/SEEPlainTextEditorTopBarViewController.xib
+++ b/SubEthaEdit-Mac/SEEPlainTextEditorTopBarViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEPlainTextEditorTopBarViewController">
             <connections>
+                <outlet property="bottomBarLayerBackedView" destination="Gvl-0m-GdF" id="I3h-jZ-X3t"/>
                 <outlet property="positionTextField" destination="Ugd-wu-f2r" id="v7J-Vc-8Ry"/>
                 <outlet property="splitButton" destination="ILs-CV-5zV" id="Pdp-2X-l36"/>
                 <outlet property="symbolPopUpButton" destination="57S-Gg-lfW" id="Edc-kB-OMb"/>
@@ -16,16 +17,16 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" id="ROy-l3-d1g" userLabel="Top Blurred View" customClass="SEEOverlayView">
+        <customView wantsLayer="YES" id="ROy-l3-d1g" userLabel="Main View" customClass="SEEOverlayView">
             <rect key="frame" x="0.0" y="0.0" width="600" height="18"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView id="57S-Gg-lfW" customClass="PopUpButton">
-                    <rect key="frame" x="71" y="0.0" width="178" height="18"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <customView wantsLayer="YES" id="Gvl-0m-GdF" userLabel="BottomLineView">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                 </customView>
-                <textField verticalHuggingPriority="750" id="W31-AX-oex">
-                    <rect key="frame" x="401" y="-1" width="181" height="18"/>
+                <textField verticalHuggingPriority="750" id="W31-AX-oex" customClass="BorderedTextField">
+                    <rect key="frame" x="401" y="0.0" width="181" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="right" title="&lt;written by ....>" id="oRf-lT-deq" customClass="InsetTextFieldCell">
                         <font key="font" metaFont="smallSystem"/>
@@ -33,8 +34,12 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <customView id="57S-Gg-lfW" customClass="PopUpButton">
+                    <rect key="frame" x="71" y="0.0" width="178" height="18"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                </customView>
                 <textField toolTip="Cursor position" verticalHuggingPriority="750" id="Ugd-wu-f2r" customClass="BorderedTextField">
-                    <rect key="frame" x="0.0" y="-2" width="93" height="18"/>
+                    <rect key="frame" x="0.0" y="-1" width="93" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="&lt;Position>" id="Xxd-jN-fK9">
                         <font key="font" metaFont="smallSystem"/>
@@ -61,30 +66,7 @@
                         <action selector="splitToggleButtonAction:" target="-2" id="EPI-eh-CQg"/>
                     </connections>
                 </button>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="QAt-ex-BjZ">
-                    <rect key="frame" x="0.0" y="-2" width="600" height="5"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" metaFont="system"/>
-                </box>
             </subviews>
-            <backgroundFilters>
-                <ciFilter name="CIColorControls">
-                    <configuration>
-                        <real key="inputBrightness" value="0.0"/>
-                        <real key="inputContrast" value="1"/>
-                        <null key="inputImage"/>
-                        <real key="inputSaturation" value="15"/>
-                    </configuration>
-                </ciFilter>
-                <ciFilter name="CIGaussianBlur">
-                    <configuration>
-                        <null key="inputImage"/>
-                        <real key="inputRadius" value="5"/>
-                    </configuration>
-                </ciFilter>
-            </backgroundFilters>
         </customView>
     </objects>
     <resources>
