--- a/SubEthaEdit-Mac/SEEPlainTextEditorTopBarViewController.xib
+++ b/SubEthaEdit-Mac/SEEPlainTextEditorTopBarViewController.xib
@@ -17,9 +17,9 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" id="ROy-l3-d1g" userLabel="Main View" customClass="SEEOverlayView">
+        <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ROy-l3-d1g" userLabel="Main View" customClass="SEEOverlayView">
             <rect key="frame" x="0.0" y="0.0" width="600" height="18"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView wantsLayer="YES" id="Gvl-0m-GdF" userLabel="BottomLineView">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
