--- a/SubEthaEdit-Mac/PlainTextEditor.xib
+++ b/SubEthaEdit-Mac/PlainTextEditor.xib
@@ -38,7 +38,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </customView>
-                <customView wantsLayer="YES" id="28" userLabel="Bottom Blurred View" customClass="SEEOverlayView">
+                <customView wantsLayer="YES" id="28" userLabel="Bottom Bar Main View" customClass="SEEOverlayView">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="18"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -136,22 +136,6 @@
                             <font key="titleFont" metaFont="system"/>
                         </box>
                     </subviews>
-                    <backgroundFilters>
-                        <ciFilter name="CIColorControls">
-                            <configuration>
-                                <real key="inputBrightness" value="0.0"/>
-                                <real key="inputContrast" value="1"/>
-                                <null key="inputImage"/>
-                                <real key="inputSaturation" value="15"/>
-                            </configuration>
-                        </ciFilter>
-                        <ciFilter name="CIGaussianBlur">
-                            <configuration>
-                                <null key="inputImage"/>
-                                <real key="inputRadius" value="5"/>
-                            </configuration>
-                        </ciFilter>
-                    </backgroundFilters>
                 </customView>
             </subviews>
         </customView>
