--- a/SubEthaEdit-Mac/SEEWebPreviewViewController.xib
+++ b/SubEthaEdit-Mac/SEEWebPreviewViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
         <plugIn identifier="com.apple.WebKitIBPlugin" version="5053"/>
@@ -100,7 +100,7 @@
                         <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="heP-ap-i0y" customClass="PopUpButton">
                             <rect key="frame" x="404" y="0.0" width="76" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                            <popUpButtonCell key="cell" type="bevel" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="clipping" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="8ya-Gk-nW2">
+                            <popUpButtonCell key="cell" type="bevel" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="clipping" inset="2" arrowPosition="noArrow" preferredEdge="maxY" id="8ya-Gk-nW2" customClass="PopUpButtonCell">
                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="smallSystem"/>
                                 <menu key="menu" title="OtherViews" id="Ucg-2U-92r">
