--- a/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
+++ b/SubEthaEdit-Mac/SEEParticipantsOverlay.xib
@@ -12,7 +12,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Overlay View" customClass="SEEOverlayView">
+        <customView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1" userLabel="Overlay View">
             <rect key="frame" x="0.0" y="0.0" width="480" height="96"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
             <constraints>
