--- a/SubEthaEdit-Mac/German.lproj/AdvancedPrefs.xib
+++ b/SubEthaEdit-Mac/German.lproj/AdvancedPrefs.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
     </dependencies>
@@ -84,22 +84,6 @@
                                     </buttonCell>
                                     <connections>
                                         <binding destination="59" name="value" keyPath="values.shouldAutoConnect" id="119">
-                                            <dictionary key="options">
-                                                <string key="NSValueTransformerName">NSNegateBoolean</string>
-                                            </dictionary>
-                                        </binding>
-                                    </connections>
-                                </button>
-                                <button id="63">
-                                    <rect key="frame" x="14" y="17" width="353" height="18"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
-                                    <string key="toolTip">Seit Version wird standardmäßig der Veränderungsverlauf bei einer Verbindung zu einem Dokument mit übertragen. Falls Sie die Verlaufsdaten nicht benötigen erhöht das Ausschalten die Verbindungsgeschwindigkeit.</string>
-                                    <buttonCell key="cell" type="check" title="Veränderungsverlauf übertragen und anfordern" bezelStyle="regularSquare" imagePosition="left" alignment="left" controlSize="small" inset="2" id="170">
-                                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                                        <font key="font" metaFont="smallSystem"/>
-                                    </buttonCell>
-                                    <connections>
-                                        <binding destination="59" name="value" keyPath="values.DontSubmitAndRequestHistory" id="148">
                                             <dictionary key="options">
                                                 <string key="NSValueTransformerName">NSNegateBoolean</string>
                                             </dictionary>
